html5/style.css
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html, body{
    position:absolute;
    width: 100%;
    height: 100%;
    -overflow:hidden;
}

a{
    color: #eec;
}

a:visited{
    color: #886;
}

h1 {
    font-size: 200%;
}

h2{
    font-size: 150%;
}

h3{
    font-size: 125%;
}

h4{
    font-size: 100%;
}

html, body, button, input, textarea{
    font-family: Georgia, Tahoma, sans-serif;
    background-color: #445;
    color: #aab;
    margin: 0;
    padding:0;
    border: 0;
}

#editArea{
    width:100%;
}

aside{
    position:absolute;
    font-size: 12pt;
    font-weight: bold;
    color: white;
    padding: 0.5em;
    padding-left: 1em;
    border: solid 1px #667;
    background-color: #556;
    top:2em;
}

button{
    margin-right: 1em;
    border:solid 1px #667;
    margin:0;
    background-color:#556;
    color:#aab;
}

button:active{
    background-color:#667;
}

button.selected{
    background-color:#778;
    color:#ccd;
}

section{
    display:none;
    float:left;
    clear:both;
    width:100%;
    height: 100%;
}

section>*{
    float:left;
    clear:left;
}

#editor, #scrollbar{
    float:right;
    height:100%;
}

.textContent{
    overflow-y: scroll;
    word-wrap: break-word;
    padding-right: 1em;
    height: 100%;
    width:100%;
}

@media(min-width:320px){
    .textContent{
        font-size: 12pt;
    }
    #scrollbar {
        width: 25px;
    }
    #infobar {
        font-size:8pt;
    }
    #filename{
        width:180px;
    }
}

@media(min-width:641px){
    .textContent{
        font-size: 18pt;
    }
    #scrollbar {
        width: 50px;
    }
    #infobar {
        font-size:10pt;
    }
    #filename{
        width:500px;
        font-size:24pt;
    }
}

@media(min-width:1080px){
    .textContent{
        font-size: 24pt;
    }
    #scrollbar {
        width: 100px;
    }
    #filename{
        font-size:30pt;
    }
}

#scrollbar{
    font-size: 2px;
    overflow: hidden;
    color: #fff;
    background-color: #667;
}

::-webkit-scrollbar {
    width: 5px;
    background-color: #778;
}

::-webkit-scrollbar-thumb:vertical {
    background-color: #667;
}

